k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hiring-backend
  labels:
    app: hiring-backend
spec:
  type: ClusterIP
  selector:
    app: hiring-backend
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  sessionAffinity: None
