k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hiring-frontend
  labels:
    app: hiring-frontend
spec:
  type: ClusterIP
  selector:
    app: hiring-frontend
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
